# codex-mistral-ocr

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  pyproject.toml
.codex-plugin/: plugin.json
docs/: codex-setup.md  design.md  security-and-privacy.md
examples/: AGENTS.md  config.toml
skills/mistral-pdf-ocr/: SKILL.md
skills/mistral-pdf-ocr/agents/: openai.yaml
src/codex_mistral_ocr/: __init__.py  cache.py  cli.py  client.py  formatting.py  mcp_server.py  page_ranges.py  processor.py  source.py  types.py
tests/: test_client.py  test_formatting.py  test_page_ranges.py  test_processor_cache.py  test_source_cache.py
