[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codex-mistral-ocr"
version = "0.1.0"
description = "Codex MCP server and skill for parsing PDFs with Mistral OCR latest."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Open source contributors" }
]
keywords = ["codex", "mcp", "mistral", "ocr", "pdf", "document-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: Markdown"
]
dependencies = [
  "httpx>=0.27,<1.0",
  "mcp>=1.13,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "mypy>=1.10"
]

[project.urls]
Homepage = "https://github.com/your-org/codex-mistral-ocr"
Repository = "https://github.com/your-org/codex-mistral-ocr"
Issues = "https://github.com/your-org/codex-mistral-ocr/issues"

[project.scripts]
codex-mistral-ocr = "codex_mistral_ocr.cli:main"
codex-mistral-ocr-mcp = "codex_mistral_ocr.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_mistral_ocr"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
